--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11307,6 +11307,7 @@ body {
   font-size: large;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -11315,4 +11316,12 @@ body {
   padding-top: 3rem;
   max-width: 30%;
   max-height: 20%;
+}
+
+.mb-3 {
+  min-width: 40vw;
+}
+
+.contenedor-formulario {
+  padding: 3rem;
 }
