--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -44,6 +44,7 @@ body {
     font-size: large;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -51,5 +52,13 @@ body {
     padding-top: 3rem;
     max-width: 30%;
     max-height: 20%;
+}
+
+.mb-3{
+    min-width: 40vw;
+}
+
+.contenedor-formulario{
+    padding: 3rem;
 }
 
