--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -44,14 +44,14 @@ body {
     font-size: large;
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     align-items: center;
     justify-content: center;
 }
 .logo{
-    padding-top: 3rem;
-    max-width: 30%;
-    max-height: 20%;
+    padding: 3rem;
+    max-width:80vw;
+    min-height: 40%;
 }
 
 .mb-3{
@@ -61,4 +61,32 @@ body {
 .contenedor-formulario{
     padding: 3rem;
 }
+
+a{
+    text-decoration: none;
+}
+
+.gossip-table{
+    border-collapse: collapse;
+    width: 40vw;
+    
+}
+
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background:$background-gradient;
+    color: $primary-color;
+    border: 1px solid $primary-color;
+    padding: 8px;   
+}
+
+th:hover{
+    background:$primary-color;
+    color: black;
+}
+  
+   
 
