--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11314,7 +11314,13 @@ body {
 
 .logo {
   padding: 3rem;
-  max-width: 80vw;
+  max-width: 50vw;
+  min-height: 40%;
+}
+
+.logo-main {
+  padding: 1rem;
+  max-width: 20vw;
   min-height: 40%;
 }
 
